--- a/SpoopyGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SpoopyGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -103,6 +103,24 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[ContentBrowser]
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/HDRI
+ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.FavoritesAreaExpanded=False
+ContentBrowserTab1.PathAreaExpanded=True
+ContentBrowserTab1.CollectionAreaExpanded=False
+ContentBrowserTab1.FavoritesSearchAreaExpanded=False
+ContentBrowserTab1.PathSearchAreaExpanded=False
+ContentBrowserTab1.CollectionSearchAreaExpanded=False
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserTab1.PluginFilters=
+ContentBrowserTab1.Favorites.SelectedPaths=
+FavoritePaths=
+
 [EditorStartup]
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
